--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "definitively-axios",
+  "name": "@ztrehagem/definitively-axios",
   "version": "0.1.0",
   "description": "",
   "author": {
@@ -20,9 +20,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:example": "tsc example.ts --module commonjs --target ES2017 && node ./example.js",
     "watch": "tsc -w",
     "clean": "rm -r dist || true",
-    "example": "node ./example.js",
     "prepare": "npm run clean && npm run build"
   },
   "husky": {
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@ztrehagem/tslint-rules": "github:ztrehagem/tslint-rules",
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.16.0",
     "husky": "^2.4.1",
     "lint-staged": "^8.2.1",
     "tslint": "^5.18.0",
