--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "@ztrehagem/definitively-axios",
   "version": "1.0.0",
-  "description": "",
+  "description": "HTTP client with type-safe response through axios.",
   "author": {
     "email": "shigeki.suwa@ztrehagem.dev",
     "name": "Shigeki Suwa",
     "url": "https://ztrehagem.dev"
   },
-  "keywords": [],
+  "keywords": [
+    "axios",
+    "typescript"
+  ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ztrehagem/definitively-axios.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ztrehagem/definitively-axios/issues"
+  },
+  "homepage": "https://github.com/ztrehagem/definitively-axios#readme",
   "publishConfig": {
     "access": "public"
   },
